# Computer-room-reservation-system

./: CMakeLists.txt  README.md
data/: student.txt
include/: computerRoom.h  globaFile.h  identity.h  manager.h  orderFile.h  student.h  teacher.h
src/: main.cpp  manager.cpp  orderFile.cpp  student.cpp  teacher.cpp
